# otter

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  build.rs  test_build.rs
docs/: test-coverage.md
examples/: badger.rs
src/: backup.rs  compaction.rs  iterator.rs  kv.rs  kv_test.rs  level_handler.rs  levels.rs  lib.rs  log_file.rs  main.rs  manifest.rs  oracle.rs  st_manager.rs  test_util.rs  transaction.rs  types.rs  value_log.rs  value_log_tests.rs
src/cli/: bank.rs  info.rs  mod.rs  stream.rs
src/event/: mod.rs
src/options/: mod.rs
src/pb/: badgerpb3.proto  badgerpb3.rs  mod.rs  protos.rs
src/skl/: alloc.rs  arena.rs  cursor.rs  node.rs  skip.rs
src/table/: builder.rs  iterator.rs  table.rs  tests.rs
src/y/: iterator.rs  merge_iterator.rs  mod.rs
