[package]
name = "melisdb"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.171", features = ["derive"] }
serde_json = { version = "1.0.103", default-features = true, features = ["alloc"] }
anyhow = "1.0.72"
thiserror = "1.0.43"
tokio = { version = "1.0", features = ["full", "tracing"] }
byteorder = "1.4.3"
rand = "0.8.5"
maligned = "0.2.1"
atomic = "0.5.3"
tabled = { version = "0.12.2", features = ["ansi-str", "color"] }
memmap = "0.7.0"
bytes = "1.4.0"
bloom = "0.3.2"
growable-bloom-filter = "2.0.1"
filename = "0.1.1"
num_cpus = "1.16.0"
threads_pool = "0.2.6"
crc32fast = "1.3.2"
async-trait = "0.1.71"
fmmap = { version = "0.3.2", features = ["tokio-async"] }
parking_lot = "0.12.1"
bitflags = "2.3.3"
libc = "0.2.147"
log = { version = "0.4.19", features = ["kv_unstable", "kv_unstable_serde", "kv_unstable_sval"] }
async-channel = "1.9.0"
file-guard = "0.1.0"
fs2 = "0.4.3"
awaitgroup = "0.7.0"
range-lock = "0.2.3"
tracing = "0.1.37"
drop_cell = "0.0.0"
walkdir = "2.3.3"
crossbeam-epoch = "0.9.15"
tokio-context = "0.1.3"
dyn-clone = "1.0.12"
eieio = "1.0.0"
either = "1.8.1"
enum-unitary = "0.5.0"
atom_box = "0.1.2"
console-subscriber = "0.1.10"
uuid = { version = "1.4.1", features = ["v5", "v4"] }
winapi = "0.3.9"
itertools = "0.11.0"
# tokio-metrics = "0.2.2"
metrics = "0.21.1"
metrics-prometheus = "0.4.1"
prometheus = "0.13.3"
lazy_static = "1.4.0"
getset = "0.1.2"
tokio-stream = "0.1.14"
async-stream = "0.3.5"
futures-core = "0.3.28"
backtrace-on-stack-overflow = "0.3.0"
prost = { version = "0.14.1", features = ["derive"] }
prost-types = "0.14.1"
clap = { version = "4.5", features = ["derive"] }
tracing-subscriber = "0.3.17"
env_logger = "0.10.0"
[dev-dependencies]
tracing-subscriber = "0.3.17"
tracing-log = "0.1.3"
chrono = "0.4.26"
env_logger = "0.10.0"
console_log = { version = "1.0.0", features = ["color"] }
itertools = "0.11.0"
# tokio-metrics = { version = "0.2.2", default-features = false, features = [] }
tokio = { version = "1.0", features = ["full", "rt", "time", "macros", "test-util"] }
criterion = { version = "0.5.1", features = ["tokio"] }


[build-dependencies]
prost-build = "0.14.1"

[[bench]]
name = "my_benchmark"
harness = false

[profile.dev]
debug-assertions = false

[profile.release]
codegen-units=1

[[bin]]
name = "melis"
path = "src/main.rs"

[lints.rust]
arithmetic_overflow = "deny"

[lints.clippy]
# Arithmetic
checked_conversions = "deny"
cast_possible_truncation = "deny"
cast_sign_loss = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
integer_division = "deny"
unchecked_duration_subtraction = "deny"

# Unwraps
unwrap_used = "warn"
expect_used = "warn"
panicking_unwrap = "deny"
option_env_unwrap = "deny"

# Array indexing
indexing_slicing = "deny"

# Path handling
join_absolute_paths = "deny"

# Serialization issues
serde_api_misuse = "deny"

# Unbounded input
uninit_vec = "deny"

# Unsafe code detection
transmute_int_to_char = "deny"
transmute_int_to_float = "deny"
transmute_ptr_to_ref = "deny"
transmute_undefined_repr = "deny"

# Code quality
todo = "deny"
unimplemented = "deny"
unnecessary_join = "deny"
string_slice = "deny"
string_to_string = "deny"
str_split_at_newline = "deny"
redundant_else = "deny"
redundant_clone = "deny"
range_plus_one = "deny"
range_minus_one = "deny"
non_zero_suggestions = "deny"
inefficient_to_string = "deny"
implicit_clone = "deny"
create_dir = "deny"
comparison_chain = "deny"
cast_lossless = "deny"
assigning_clones = "deny"
single_match_else = "deny"
manual_let_else = "deny"
unnecessary_wraps = "deny"
single_char_pattern = "deny"
manual_string_new = "deny"
trivially_copy_pass_by_ref = "deny"
doc_markdown = "deny"
semicolon_if_nothing_returned = "deny"
redundant_closure_for_method_calls = "deny"
explicit_iter_loop = "deny"
equatable_if_let = "deny"
infinite_loop = "deny"
needless_collect = "deny"
nonstandard_macro_braces = "deny"
option_if_let_else = "deny"
useless_let_if_seq = "deny"
